macro(subdirlist result curdir)
  file(GLOB children RELATIVE ${curdir} ${curdir}/*)
  set(dirlist "")
  foreach(child ${children})
    if(IS_DIRECTORY ${curdir}/${child})
        set(dirlist ${dirlist} ${child})
    endif()
  endforeach()
  set(${result} ${dirlist})
endmacro()

subdirlist(subdirectories ${CMAKE_CURRENT_SOURCE_DIR})

foreach(subdirectory ${subdirectories})
    if(NOT (subdirectory STREQUAL "include"))
        add_subdirectory(${subdirectory})
    endif()
endforeach()
